2010-11-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #16573: Register count_MENUOBJ is not properly initialized

2010-11-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16317: [scheduler] Valid values generated from cron command does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16319: [scheduler] CronCmd class variable "values" does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16322: Incorrect regexp in substituteMarkerArray
	
2010-11-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16124: htmlArea RTE: Links are incorrectly updated in Google Chrome

2010-11-23  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed bug #16517: t3lib_beFunc::getRecordWSOL() does not use it's param $useDeleteClause in else branch

2010-11-12  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15456: Changes made by ColorPicker Wizard are not saved (Thanks to Tobias Hoevelborn)

2010-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16314: Incorrect use of is_dir in class.tx_rtehtmlarea_clearrtecache.php (Thanks to Juergen Deisenroth)

2010-11-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16352: [saltedpasswords] Login with bulk updated passwords from t3sec_saltedpw not working (Thanks to Marcus Krause)

2010-11-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16214: Bug: Change value of Media(Flash) parameter (Thanks to Janos Thiele)

2010-11-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16130: buggy initialization of flash uploader when only certain file extensions are allowed (Thanks to Andreas Kiessling)

2010-11-04  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15656: indexed_search: Template corrections of #14130 not applied to the CSS template (Thanks to Lorenz Ulrich)

2010-11-03  Steffen Kamper  <steffen@typo3.org>
